# fastapi_pydentic_sqlalchemy_docker

./: README.md  exemplo00.py  pyproject.toml
src/: controller.py  db.py  main.py  model.py  pokemon.db  schema.py
